Improve CMake check when both interpreter modes are OFF
The style of this check is improved, we can use an elseif instead of going through another if block to add the REPL definitions. Even though this is fine in theory, setting both flags to ON, caused this to add both definitions, which is fixed by the previous commit.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -293,16 +293,15 @@ set(CMAKE_INCLUDE_CURRENT_DIR ON)
 # In rare cases we might want to have clang installed in a different place
 # than llvm and the header files should be found first (even though the
 # LLVM_INCLUDE_DIRS) contain clang headers, too.
-if (CPPINTEROP_USE_CLING)
+if(CPPINTEROP_USE_CLING)
   add_definitions(-DCPPINTEROP_USE_CLING)
   include_directories(SYSTEM ${CLING_INCLUDE_DIRS})
-  else()
-  if (NOT CPPINTEROP_USE_REPL)
-  message(FATAL_ERROR "We need either CPPINTEROP_USE_CLING or CPPINTEROP_USE_REPL")
-  endif()
+elseif(CPPINTEROP_USE_REPL)
   add_definitions(-DCPPINTEROP_USE_REPL)
+else()
+  message(FATAL_ERROR "We need either CPPINTEROP_USE_CLING or CPPINTEROP_USE_REPL")
+endif()
 
-endif(CPPINTEROP_USE_CLING)
 include_directories(SYSTEM ${CLANG_INCLUDE_DIRS})
 include_directories(SYSTEM ${LLVM_INCLUDE_DIRS})
 separate_arguments(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
