Fix all crashing tests for emscripten build (#523)
Co-authored-by: mcbarton <matthew.c.barton@hotmail.co.uk>

--- a/unittests/CppInterOp/CMakeLists.txt
+++ b/unittests/CppInterOp/CMakeLists.txt
@@ -25,16 +25,33 @@ add_cppinterop_unittest(CppInterOpTests
 )
 
 if(EMSCRIPTEN)
-  # Explaination of compile and link flags
-  # To dynamically link to a shared library for Emscripten builds you must use the MAIN_MODULE flag (see both https://github.com/emscripten-core/emscripten/issues/23543#issuecomment-2625334414
-  # and https://emscripten.org/docs/compiling/Dynamic-Linking.html)
-  # Without WASM_BIGINT flag then you get fatal errors when trying to run compiled Javascript about trying to convert between BigInt and non BigInt types
-  # EXPORTED_RUNTIME_METHODS='[\"FS\",\"PATH\",\"LDSO\",\"loadDynamicLibrary\",\"ERRNO_CODES\"]' and --preload-file ${SYSROOT_PATH}/include@/include are not allow the Javascript that is 
-  # compiled to have access to the standard library headers (approach taken from xeus-cpp)
-  # Without ALLOW_MEMORY_GROWTH=1 tests will fail with aborted(OOM). Approach to fix taken from answers to
-  # https://stackoverflow.com/questions/67222200/runtimeerror-abortoom-build-with-s-assertions-1-for-more-info
-  set_target_properties(CppInterOpTests PROPERTIES
-    LINK_FLAGS "-s MAIN_MODULE=1 -s WASM_BIGINT -s EXPORTED_RUNTIME_METHODS='[\"FS\",\"PATH\",\"LDSO\",\"loadDynamicLibrary\",\"ERRNO_CODES\"]' --preload-file ${SYSROOT_PATH}/include@/include -s ALLOW_MEMORY_GROWTH=1"
+  # Explanation of Emscripten-specific link flags for CppInterOpTests:
+  #
+  # MAIN_MODULE=1:
+  # Enables building CppInterOpTests.js as the main WebAssembly module, allowing dynamic linking of side modules.
+  #
+  # WASM_BIGINT:
+  # Ensures support for 64-bit integer types by enabling JavaScript BigInt integration in WASM.
+  #
+  # ALLOW_MEMORY_GROWTH=1:
+  # Allows the WebAssembly memory to grow dynamically at runtime to accommodate increasing memory needs.
+  # Would lead to an abortOnCannotGrowMemory error if memory cannot be grown while running the tests.
+  #
+  # STACK_SIZE=32mb: Allocates 32MB of stack space to handle deep recursion or large stack-allocated objects safely.
+  # INITIAL_MEMORY=128mb: Sets the initial linear memory size to 128MB to reduce the likelihood of early memory expansion and improve performance.
+  # The STACK_SIZE and INITIAL_MEMORY values are chosen based on what has been put to use for running xeus-cpp-lite.
+  # Check https://github.com/jupyter-xeus/xeus/blob/main/cmake/WasmBuildOptions.cmake#L35-L36 for more details.
+  # Not setting these flags would lead to a memory access out of bounds error while running the tests.
+  #
+  # --preload-file ${SYSROOT_PATH}/include@/include:
+  # Preloads the system include directory into the Emscripten virtual filesystem to make headers accessible at runtime.
+  target_link_options(CppInterOpTests
+    PUBLIC "SHELL: -s MAIN_MODULE=1"
+    PUBLIC "SHELL: -s WASM_BIGINT"
+    PUBLIC "SHELL: -s ALLOW_MEMORY_GROWTH=1"
+    PUBLIC "SHELL: -s STACK_SIZE=32mb"
+    PUBLIC "SHELL: -s INITIAL_MEMORY=128mb"
+    PUBLIC "SHELL: --preload-file ${SYSROOT_PATH}/include@/include"
   )
 endif()
 
@@ -69,16 +86,14 @@ target_link_libraries(DynamicLibraryManagerTests
 )
 
 if(EMSCRIPTEN)
-  # Explaination of compile and link flags
-  # To dynamically link to a shared library for Emscripten builds you must use the MAIN_MODULE flag (see both https://github.com/emscripten-core/emscripten/issues/23543#issuecomment-2625334414
-  # and https://emscripten.org/docs/compiling/Dynamic-Linking.html)
-  # Without WASM_BIGINT flag then you get fatal errors when trying to run compiled Javascript about trying to convert between BigInt and non BigInt types
-  # EXPORTED_RUNTIME_METHODS='[\"FS\",\"PATH\",\"LDSO\",\"loadDynamicLibrary\",\"ERRNO_CODES\"]' and --preload-file ${SYSROOT_PATH}/include@/include are not allow the Javascript that is 
-  # compiled to have access to the standard library headers (approach taken from xeus-cpp)
-  # Without ALLOW_MEMORY_GROWTH=1 tests will fail with aborted(OOM). Approach to fix taken from answers to
-  # https://stackoverflow.com/questions/67222200/runtimeerror-abortoom-build-with-s-assertions-1-for-more-info
-  set_target_properties(DynamicLibraryManagerTests PROPERTIES
-    LINK_FLAGS "-s MAIN_MODULE=1 -s WASM_BIGINT -s EXPORTED_RUNTIME_METHODS='[\"FS\",\"PATH\",\"LDSO\",\"loadDynamicLibrary\",\"ERRNO_CODES\"]' --preload-file ${SYSROOT_PATH}/include@/include -s ALLOW_MEMORY_GROWTH=1"
+  # Check explanation of Emscripten-specific link flags for CppInterOpTests above for DynamicLibraryManagerTests as well.
+  target_link_options(DynamicLibraryManagerTests
+    PUBLIC "SHELL: -s MAIN_MODULE=1"
+    PUBLIC "SHELL: -s WASM_BIGINT"
+    PUBLIC "SHELL: -s ALLOW_MEMORY_GROWTH=1"
+    PUBLIC "SHELL: -s STACK_SIZE=32mb"
+    PUBLIC "SHELL: -s INITIAL_MEMORY=128mb"
+    PUBLIC "SHELL: --preload-file ${SYSROOT_PATH}/include@/include"
   )
 endif()
 
