--- a/.github/workflows/Ubuntu-arm.yml
+++ b/.github/workflows/Ubuntu-arm.yml
@@ -388,66 +388,7 @@ jobs:
         echo "CODE_COVERAGE=1" >> $GITHUB_ENV
         echo "BUILD_TYPE=Debug" >> $GITHUB_ENV
 
-    - name: Build and Test/Install CppInterOp
-      run: |
-        LLVM_DIR="$(pwd)/llvm-project"
-        LLVM_BUILD_DIR="$(pwd)/llvm-project/build"
-        cling_on=$(echo "${{ matrix.cling }}" | tr '[:lower:]' '[:upper:]')
-        if [[ "${cling_on}" == "ON" ]]; then
-          CLING_DIR="$(pwd)/cling"
-          CLING_BUILD_DIR="$(pwd)/cling/build"
-          CPLUS_INCLUDE_PATH="${CLING_DIR}/tools/cling/include:${CLING_BUILD_DIR}/include:${LLVM_DIR}/llvm/include:${LLVM_DIR}/clang/include:${LLVM_BUILD_DIR}/include:${LLVM_BUILD_DIR}/tools/clang/include:$PWD/include"
-        else
-          CPLUS_INCLUDE_PATH="${LLVM_DIR}/llvm/include:${LLVM_DIR}/clang/include:${LLVM_BUILD_DIR}/include:${LLVM_BUILD_DIR}/tools/clang/include:$PWD/include"
-        fi
-
-        export CB_PYTHON_DIR="$PWD/cppyy-backend/python"
-        export CPPINTEROP_DIR="$CB_PYTHON_DIR/cppyy_backend"
-
-        # Build CppInterOp next to cling and llvm-project.
-        mkdir build && cd build
-        export CPPINTEROP_BUILD_DIR=$PWD
-        cling_on=$(echo "${{ matrix.cling }}" | tr '[:lower:]' '[:upper:]')
-        if [[ "${cling_on}" == "ON" ]]; then
-          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}        \
-                -DCPPINTEROP_USE_CLING=ON                                  \
-                -DCPPINTEROP_USE_REPL=OFF                                  \
-                -DCPPINTEROP_INCLUDE_DOCS=${{ matrix.documentation }} \
-                -DCling_DIR=$LLVM_BUILD_DIR/tools/cling         \
-                -DLLVM_DIR=$LLVM_BUILD_DIR/lib/cmake/llvm       \
-                -DClang_DIR=$LLVM_BUILD_DIR/lib/cmake/clang     \
-                -DBUILD_SHARED_LIBS=ON                          \
-                -DCODE_COVERAGE=${{ env.CODE_COVERAGE }}        \
-                -DCMAKE_INSTALL_PREFIX=$CPPINTEROP_DIR          \
-                -DLLVM_ENABLE_WERROR=On                         \
-                ../
-        else
-          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}     \
-                -DCPPINTEROP_INCLUDE_DOCS=${{ matrix.documentation }} \
-                -DLLVM_DIR=$LLVM_BUILD_DIR/lib/cmake/llvm    \
-                -DClang_DIR=$LLVM_BUILD_DIR/lib/cmake/clang  \
-                -DBUILD_SHARED_LIBS=ON                       \
-                -DCODE_COVERAGE=${{ env.CODE_COVERAGE }}     \
-                -DCMAKE_INSTALL_PREFIX=$CPPINTEROP_DIR       \
-                -DLLVM_ENABLE_WERROR=On                      \
-                ../
-        fi
-        docs_on=$(echo "${{ matrix.documentation }}" | tr '[:lower:]' '[:upper:]')
-        if [[ "${docs_on}" == "ON" ]]; then
-          cmake --build . --target doxygen-cppinterop --parallel ${{ env.ncpus }}
-          cmake --build . --target sphinx-cppinterop --parallel ${{ env.ncpus }}
-        else
-          cmake --build . --target check-cppinterop --parallel ${{ env.ncpus }}
-          valgrind --show-error-list=yes --track-origins=yes --error-exitcode=1 unittests/CppInterOp/CppInterOpTests/unittests/bin/${{ env.BUILD_TYPE }}/CppInterOpTests
-        fi
-        cd ..
-        # We need CB_PYTHON_DIR later
-        echo "CB_PYTHON_DIR=$CB_PYTHON_DIR" >> $GITHUB_ENV
-        # We need CPPINTEROP_DIR, LLVM_BUILD_DIR and CPLUS_INCLUDE_PATH later
-        echo "CPPINTEROP_BUILD_DIR=$CPPINTEROP_BUILD_DIR" >> $GITHUB_ENV
-        echo "CPPINTEROP_DIR=$CPPINTEROP_DIR" >> $GITHUB_ENV
-        echo "LLVM_BUILD_DIR=$LLVM_BUILD_DIR" >> $GITHUB_ENV
-        echo "CPLUS_INCLUDE_PATH=$CPLUS_INCLUDE_PATH" >> $GITHUB_ENV
+    - uses: ./.github/actions/Build_and_Test_CppInterOp
 
     - name: Prepare code coverage report
       if: ${{ success() && (matrix.coverage == true) }}
