--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -322,73 +322,7 @@ jobs:
           ${{ matrix.cling=='On' && 'cling' || '' }}
         key: ${{ env.CLING_HASH }}-${{ runner.os }}-${{ matrix.os }}-${{ matrix.compiler }}-clang-${{ matrix.clang-runtime }}.x-patch-${{ hashFiles(format('patches/llvm/clang{0}-*.patch', matrix.clang-runtime)) || 'none' }}
 
-    - name: Build and Test/Install CppInterOp on Windows systems
-      run: |
-        #until https://github.com/compiler-research/CppInterOp/issues/188 is solved
-        $env:PWD_DIR= $PWD.Path
-
-        $env:LLVM_DIR="$env:PWD_DIR\llvm-project"
-        echo "LLVM_DIR=$env:LLVM_DIR"
-        echo "LLVM_DIR=$env:LLVM_DIR" >> $env:GITHUB_ENV
-
-        $env:LLVM_BUILD_DIR="$env:PWD_DIR\llvm-project\build"
-        echo "LLVM_BUILD_DIR=$env:LLVM_BUILD_DIR"
-        echo "LLVM_BUILD_DIR=$env:LLVM_BUILD_DIR" >> $env:GITHUB_ENV
-
-        if ( "${{ matrix.cling }}" -imatch "On" )
-        {
-          $env:CLING_DIR="$env:PWD_DIR\cling"
-          echo "CLING_DIR=$env:CLING_DIR"
-          echo "CLING_DIR=$env:CLING_DIR" >> $env:GITHUB_ENV
-
-          $env:CLING_BUILD_DIR="$env:PWD_DIR\cling\build"
-          echo "CLING_BUILD_DIR=$env:CLING_BUILD_DIR"
-          echo "CLING_BUILD_DIR=$env:CLING_BUILD_DIR" >> $env:GITHUB_ENV
-
-          $env:CPLUS_INCLUDE_PATH="$env:CLING_DIR\tools\cling\include;$env:CLING_BUILD_DIR\include;$env:LLVM_DIR\llvm\include;$env:LLVM_DIR\clang\include;$env:LLVM_BUILD_DIR\include;$env:LLVM_BUILD_DIR\tools\clang\include;$env:PWD_DIR\include;"
-          echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH"
-          echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH" >> $env:GITHUB_ENV
-        }
-        else
-        {
-          $env:CPLUS_INCLUDE_PATH="$env:LLVM_DIR\llvm\include;$env:LLVM_DIR\clang\include;$env:LLVM_BUILD_DIR\include;$env:LLVM_BUILD_DIR\tools\clang\include;$env:PWD_DIR\include;"
-          echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH"
-          echo "CPLUS_INCLUDE_PATH=$env:CPLUS_INCLUDE_PATH" >> $env:GITHUB_ENV
-        }
-
-        $env:CB_PYTHON_DIR="$env:PWD_DIR\cppyy-backend\python"
-        echo "CB_PYTHON_DIR=$env:CB_PYTHON_DIR"
-        echo "CB_PYTHON_DIR=$env:CB_PYTHON_DIR" >> $env:GITHUB_ENV
-
-        $env:CPPINTEROP_DIR="$env:CB_PYTHON_DIR\cppyy-backend"
-        echo "CPPINTEROP_DIR=$env:CPPINTEROP_DIR"
-        echo "CPPINTEROP_DIR=$env:CPPINTEROP_DIR" >> $env:GITHUB_ENV
-
-        # Build CppInterOp next to cling and llvm-project.
-        mkdir build
-        cd build
-        $env:CPPINTEROP_BUILD_DIR="$env:PWD_DIR"
-        echo "CPPINTEROP_BUILD_DIR=$env:CPPINTEROP_BUILD_DIR"
-        echo "CPPINTEROP_BUILD_DIR=$env:CPPINTEROP_BUILD_DIR" >> $env:GITHUB_ENV
-        if ( "${{ matrix.cling }}" -imatch "On" )
-        {
-          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}    `
-                -DCPPINTEROP_USE_CLING=ON                                  `
-                -DCPPINTEROP_USE_REPL=OFF                                  `
-                -DCling_DIR="$env:LLVM_BUILD_DIR\tools\cling"   `
-                -DLLVM_DIR="$env:LLVM_BUILD_DIR" `
-                -DLLVM_ENABLE_WERROR=On                          `
-                -DClang_DIR="$env:LLVM_BUILD_DIR"  -DCODE_COVERAGE=${{ env.CODE_COVERAGE }} -DCMAKE_INSTALL_PREFIX="$env:CPPINTEROP_DIR"  ..\
-        }
-        else
-        {
-          cmake -DCMAKE_BUILD_TYPE=${{ env.BUILD_TYPE }}    `
-                -DLLVM_DIR="$env:LLVM_BUILD_DIR\lib\cmake\llvm"  `
-                -DLLVM_ENABLE_WERROR=On                          `
-                -DClang_DIR="$env:LLVM_BUILD_DIR\lib\cmake\clang"  -DCODE_COVERAGE=${{ env.CODE_COVERAGE }}  -DCMAKE_INSTALL_PREFIX="$env:CPPINTEROP_DIR"  ..\
-                cmake --build . --config ${{ env.BUILD_TYPE }} --target googletest --parallel ${{ env.ncpus }}
-        }
-        cmake --build . --config ${{ env.BUILD_TYPE }} --target check-cppinterop --parallel ${{ env.ncpus }}
+    - uses: ./.github/actions/Build_and_Test_CppInterOp
 
     - name: Setup tmate session
       if: ${{ failure() && runner.debug }}
