--- a/.github/workflows/emscripten.yml
+++ b/.github/workflows/emscripten.yml
@@ -539,3 +539,10 @@ jobs:
           ..
         emmake make -j ${{ env.ncpus }} install
 
+    - name: Test xeus-cpp C++ Emscripten
+      shell: bash -l {0}
+      run: |
+        set -e
+        micromamba activate CppInterOp-wasm
+        cd ./xeus-cpp/build/test
+        node test_xeus_cpp.js
