--- a/.github/workflows/MacOS-arm.yml
+++ b/.github/workflows/MacOS-arm.yml
@@ -22,6 +22,13 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - name: osx15-arm-clang-clang-repl-20
+            os: macos-15
+            compiler: clang
+            clang-runtime: '20'
+            cling: Off
+            llvm_enable_projects: "clang"
+            llvm_targets_to_build: "host"
           - name: osx15-arm-clang-clang-repl-19
             os: macos-15
             compiler: clang
@@ -252,6 +259,12 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - name: osx15-arm-clang-clang-repl-20
+            os: macos-15
+            compiler: clang
+            clang-runtime: '20'
+            cling: Off
+            cppyy: Off
           - name: osx15-arm-clang-clang-repl-19-cppyy
             os: macos-15
             compiler: clang
