Add  -s STRICT=1 flag emscripten build

--- a/lib/Interpreter/CMakeLists.txt
+++ b/lib/Interpreter/CMakeLists.txt
@@ -129,6 +129,7 @@ if(EMSCRIPTEN)
   target_link_options(clangCppInterOp
     PRIVATE "SHELL: -s WASM_BIGINT"
     PRIVATE "SHELL: -s SIDE_MODULE=1"
+    PRIVATE "SHELL: -s STRICT=1"
     PRIVATE "SHELL: ${SYMBOLS_LIST}"
   )
   if (CPPINTEROP_ENABLE_TESTING)
